--- a/supabase/functions/telegram-auth-callback/deno.json
+++ b/supabase/functions/telegram-auth-callback/deno.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "lib": ["esnext", "dom"],
+    "strict": true
+  },
   "imports": {
     "https://deno.land/std@0.168.0/http/server.ts": "https://deno.land/std@0.168.0/http/server.ts",
     "https://esm.sh/@supabase/supabase-js@2": "https://esm.sh/@supabase/supabase-js@2",
