--- a/supabase/functions/telegram-auth-start/deno.json
+++ b/supabase/functions/telegram-auth-start/deno.json
@@ -1,6 +1,10 @@
 {
+  "compilerOptions": {
+    "lib": ["esnext", "dom"],
+    "strict": true
+  },
   "imports": {
     "https://deno.land/std@0.168.0/http/server.ts": "https://deno.land/std@0.168.0/http/server.ts",
-    "../_shared/cors.ts": "../_shared/cors.ts"
+    "https://esm.sh/@supabase/supabase-js@2": "https://esm.sh/@supabase/supabase-js@2"
   }
-}}
+}
