--- a/supabase/functions/telegram-webhook/deno.json
+++ b/supabase/functions/telegram-webhook/deno.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "lib": ["esnext", "dom"],
+    "strict": true
+  },
   "imports": {
     "https://deno.land/std@0.168.0/http/server.ts": "https://deno.land/std@0.168.0/http/server.ts",
     "../_shared/cors.ts": "../_shared/cors.ts"
